Rearrange templates and merge with tests in examples

--- a/naunet/templates/base/cpp/src/naunet_physics.cpp.j2
+++ b/naunet/templates/base/cpp/src/naunet_physics.cpp.j2
@@ -1,10 +1,11 @@
-#include <stdio.h>
 #include <math.h>
+#include <stdio.h>
+
 #include <algorithm>
 
 #include "naunet_constants.h"
-#include "naunet_utilities.h"
 #include "naunet_macros.h"
+#include "naunet_utilities.h"
 #include "{{ physics.header }}"
 
 // clang-format off
@@ -159,15 +160,16 @@ double GetH2shieldingInt(double coldens) {
 // Calculates the line self shielding function
 // Ref: Federman et al. apj vol.227 p.466.
 // Originally implemented in UCLCHEM
+// clang-format off
 {% if info.device == "gpu" -%} __device__ {% endif -%}
 double GetH2shieldingFGK(double coldens) {
     // clang-format on
 
-    const double dopplerwidth = 3.0e10;
-    const double radiativewidth = 8.0e7;
+    const double dopplerwidth       = 3.0e10;
+    const double radiativewidth     = 8.0e7;
     const double oscillatorstrength = 1.0e-2;
 
-    double shielding = -1.0;
+    double shielding                = -1.0;
 
     double taud = 0.5 * coldens * 1.5e-2 * oscillatorstrength / dopplerwidth;
 
@@ -176,27 +178,23 @@ double GetH2shieldingFGK(double coldens) {
 
     double sr = 0.0;
     if (radiativewidth != 0.0) {
-        double r  = radiativewidth / (1.7724539*dopplerwidth);
-        double t  = 3.02 * pow(1000.0*r, -0.064);
-        double u  = pow(taud*r, 0.5) / t;
-        sr = pow((u*u + 0.78539816), -0.5) * r / t;
+        double r = radiativewidth / (1.7724539 * dopplerwidth);
+        double t = 3.02 * pow(1000.0 * r, -0.064);
+        double u = pow(taud * r, 0.5) / t;
+        sr       = pow((u * u + 0.78539816), -0.5) * r / t;
     }
 
     // Calculate doppler contribution of self shielding function sj
     double sj = 0.0;
     if (taud == 0.0) {
         sj = 1.0;
-    }
-    else if (taud < 2.0) {
-        sj = exp(-0.6666667*taud) ;
-    }
-    else if (taud < 10.0) {
+    } else if (taud < 2.0) {
+        sj = exp(-0.6666667 * taud);
+    } else if (taud < 10.0) {
         sj = 0.638 * pow(taud, -1.25);
-    }
-    else if (taud < 100.0) {
+    } else if (taud < 100.0) {
         sj = 0.505 * pow(taud, -1.15);
-    }
-    else {
+    } else {
         sj = 0.344 * pow(taud, -1.0667);
     }
 
@@ -290,14 +288,17 @@ double GetCOshieldingInt(double tgas, double h2col, double coldens) {
     return shielding;
 }
 
+// clang-format off
 {% if info.device == "gpu" -%} __device__ {% endif -%}
 double GetCOshieldingInt1(double h2col, double coldens) {
     // clang-format on
     double shielding = -1.0;
 
     /* {% if "VB88Table" in physics.coshielding -%} */
-    double logh2 = std::min(std::max(log10(h2col), COShieldingTableX[0]), COShieldingTableX[5]);
-    double logco = std::min(std::max(log10(coldens), COShieldingTableY[0]), COShieldingTableY[6]);
+    double logh2     = std::min(std::max(log10(h2col), COShieldingTableX[0]),
+                                COShieldingTableX[5]);
+    double logco     = std::min(std::max(log10(coldens), COShieldingTableY[0]),
+                                COShieldingTableY[6]);
 
     /* {% if info.device == "gpu" -%} */
 
@@ -310,12 +311,12 @@ double GetCOshieldingInt1(double h2col, double coldens) {
     double **y  = naunet_util::matrix(1, 6, 1, 7);
     double **y2 = naunet_util::matrix(1, 6, 1, 7);
 
-    for (int i=1; i<=6; i++) x1[i] = COShieldingTableX[i-1];
-    for (int i=1; i<=7; i++) x2[i] = COShieldingTableY[i-1];
+    for (int i = 1; i <= 6; i++) x1[i] = COShieldingTableX[i - 1];
+    for (int i = 1; i <= 7; i++) x2[i] = COShieldingTableY[i - 1];
 
-    for (int i=1; i<=6; i++) {
-        for (int j=1; j<=7; j++) {
-            y[i][j] = COShieldingTable[i-1][j-1];
+    for (int i = 1; i <= 6; i++) {
+        for (int j = 1; j <= 7; j++) {
+            y[i][j] = COShieldingTable[i - 1][j - 1];
         }
     }
 
@@ -431,55 +432,50 @@ double GetN2shieldingInt(double tgas, double h2col, double coldens) {
 // tau(lambda) is the opt. depth for dust extinction at
 // wavelength x (cf. b.d.savage and j.s.mathis, annual
 // review of astronomy and astrophysics vol.17(1979),p.84)
+// clang-format off
 {% if info.device == "gpu" -%} __device__ {% endif -%}
 double xlamda(double wavelength) {
-    double x[29] = {
-        910.0, 950.0, 1000.0, 1050.0, 1110.0,
-        1180.0, 1250.0, 1390.0, 1490.0, 1600.0,
-        1700.0, 1800.0, 1900.0, 2000.0, 2100.0, 
-        2190.0, 2300.0, 2400.0, 2500.0, 2740.0,
-        3440.0, 4000.0, 4400.0, 5500.0, 7000.0,
-        9000.0, 12500.0, 22000.0, 34000.0
-    };
+    // clang-format on
+    double x[29] = {910.0,  950.0,  1000.0,  1050.0,  1110.0, 1180.0,
+                    1250.0, 1390.0, 1490.0,  1600.0,  1700.0, 1800.0,
+                    1900.0, 2000.0, 2100.0,  2190.0,  2300.0, 2400.0,
+                    2500.0, 2740.0, 3440.0,  4000.0,  4400.0, 5500.0,
+                    7000.0, 9000.0, 12500.0, 22000.0, 34000.0};
 
-    double y[29] = {
-        5.76, 5.18, 4.65, 4.16, 3.73, 
-        3.4, 3.11, 2.74, 2.63, 2.62, 
-        2.54, 2.5, 2.58, 2.78, 3.01, 
-        3.12, 2.86, 2.58, 2.35, 2.0, 
-        1.58, 1.42, 1.32, 1.0, 0.75,
-        0.48, 0.28, 0.12, 0.05
-    };
+    double y[29] = {5.76, 5.18, 4.65, 4.16, 3.73, 3.4,  3.11, 2.74, 2.63, 2.62,
+                    2.54, 2.5,  2.58, 2.78, 3.01, 3.12, 2.86, 2.58, 2.35, 2.0,
+                    1.58, 1.42, 1.32, 1.0,  0.75, 0.48, 0.28, 0.12, 0.05};
 
     if (wavelength < x[0]) {
         return 5.76;
     }
 
     else if (wavelength >= x[28]) {
-        return 0.05 - 5.16e-11 * (wavelength-x[28]);
+        return 0.05 - 5.16e-11 * (wavelength - x[28]);
     }
 
-    for (int i=0; i<28; i++) {
-        if (wavelength >= x[i] && wavelength < x[i+1]) {
-            return y[i] + (y[i+1] - y[i]) * (wavelength - x[i]) / (x[i+1] - x[i]);
+    for (int i = 0; i < 28; i++) {
+        if (wavelength >= x[i] && wavelength < x[i + 1]) {
+            return y[i] +
+                   (y[i + 1] - y[i]) * (wavelength - x[i]) / (x[i + 1] - x[i]);
         }
     }
 
     return 0.0;
-
 }
 
-// Calculate the influence of dust extinction (g=0.8, omega=0.3) 
+// Calculate the influence of dust extinction (g=0.8, omega=0.3)
 // Ref: Wagenblast & Hartquist, mnras237, 1019 (1989)
 // Adapted from UCLCHEM
+// clang-format off
 {% if info.device == "gpu" -%} __device__ {% endif -%}
 double GetGrainScattering(double av, double wavelength) {
-
+    // clang-format on
     double c[6] = {1.0e0, 2.006e0, -1.438e0, 7.364e-1, -5.076e-1, -5.920e-2};
     double k[6] = {7.514e-1, 8.490e-1, 1.013e0, 1.282e0, 2.005e0, 5.832e0};
 
-    double tv = av / 1.086;
-    double tl = tv * xlamda(wavelength);
+    double tv   = av / 1.086;
+    double tl   = tv * xlamda(wavelength);
 
     double scat = 0.0;
     double expo;
@@ -488,9 +484,8 @@ double GetGrainScattering(double av, double wavelength) {
         if (expo < 35.0) {
             scat = c[0] * exp(-expo);
         }
-    }
-    else {
-        for (int i=1; i<6; i++) {
+    } else {
+        for (int i = 1; i < 6; i++) {
             expo = k[i] * tl;
             if (expo < 35.0) {
                 scat = scat + c[i] * exp(-expo);
@@ -499,19 +494,20 @@ double GetGrainScattering(double av, double wavelength) {
     }
 
     return scat;
-
 }
 
 // Calculate lambda bar (in a) according to equ. 4 of van dishoeck
 // and black, apj 334, p771 (1988)
 // Adapted from UCLCHEM
+// clang-format off
 {% if info.device == "gpu" -%} __device__ {% endif -%}
 double GetCharactWavelength(double h2col, double cocol) {
-    double logco = log10(abs(cocol)+1.0);
-    double logh2 = log10(abs(h2col)+1.0);
+    // clang-format on
+    double logco = log10(abs(cocol) + 1.0);
+    double logh2 = log10(abs(h2col) + 1.0);
 
-    double lbar = (5675.0 - 200.6*logh2) - (571.6 - 24.09*logh2) * logco 
-                + (18.22 - 0.7664*logh2) * pow(logco, 2.0);
+    double lbar  = (5675.0 - 200.6 * logh2) - (571.6 - 24.09 * logh2) * logco +
+                  (18.22 - 0.7664 * logh2) * pow(logco, 2.0);
 
     // lbar represents the mean of the wavelengths of the 33
     // dissociating bands weighted by their fractional contribution
@@ -519,11 +515,10 @@ double GetCharactWavelength(double h2col, double cocol) {
     // the wavelength of band 33 (1076.1a) and not be smaller than
     // the wavelength of band 1 (913.6a).
 
-    /* {% if info.device == "gpu" -%} */ 
+    /* {% if info.device == "gpu" -%} */
     lbar = min(1076.0, max(913.0, lbar));
     /* {% else -%} */
     lbar = std::min(1076.0, std::max(913.0, lbar));
     /* {% endif -%} */
     return lbar;
-
 }
