--- a/naunet/templates/cvode/src/naunet.cpp.j2
+++ b/naunet/templates/cvode/src/naunet.cpp.j2
@@ -610,10 +610,9 @@ int Naunet::Solve(realtype *ab, realtype dt, NaunetData *data) {
                 cvflag);
         fprintf(errfp_, "Initial condition: \n");
 
-        {% for v in variables.varis.keys() -%
-        }
+        /* {% for v in variables.varis.keys() -%} */
         fprintf(errfp_, "    data.{{ v }} = %13.7e;\n", data->{{v}});
-        { % endfor % }
+        /* {% endfor %} */
 
         fprintf(errfp_, "\n");
 
