--- a/naunet/templates/base/cpp/tests/multiplegrid.cpp.j2
+++ b/naunet/templates/base/cpp/tests/multiplegrid.cpp.j2
@@ -1,5 +1,7 @@
 #include <stdio.h>
+
 #include <stdexcept>
+#include <vector>
 
 #include "naunet.h"
 #include "naunet_data.h"
@@ -11,14 +13,16 @@ int main() {
     int nsystem      = 2048;
     double spy       = 86400.0 * 365.0;
 
-    double nH       = 2e4;
-    double Tgas     = 15.0;
-
     NaunetData *data = new NaunetData[nsystem];
+    // {%- block parameters %}
+    double nH        = 2e4;
+    double Tgas      = 15.0;
+
     for (int isys = 0; isys < nsystem; isys++) {
-        data[isys].nH       = nH;
-        data[isys].Tgas     = Tgas;
+        data[isys].nH   = nH;
+        data[isys].Tgas = Tgas;
     }
+    // {%- endblock parameters %}
 
     Naunet naunet;
     if (naunet.Init() == NAUNET_FAIL) {
@@ -26,7 +30,7 @@ int main() {
     }
 
     if (naunet.Reset(nsystem) == NAUNET_FAIL) {
-        printf("Reset Fail\n");
+        throw std::runtime_error("Fail to reset the number of systems");
     }
 
     double *y = new double[nsystem * NEQUATIONS];
@@ -34,8 +38,10 @@ int main() {
         for (int i = 0; i < NEQUATIONS; i++) {
             y[isys * NEQUATIONS + i] = 1.e-40;
         }
+        // {%- block initial_abundance %}
         // Set your initial abundance here
         throw std::runtime_error("Abundance has not been assigned");
+        // {%- endblock initial_abundance %}
     }
 
     FILE *fbin = fopen("evolution_multiplegrid.bin", "w");
@@ -48,9 +54,34 @@ int main() {
     // double rates[NREACTIONS];
 #endif
 
-    double logtstart = 2.0, logtend = 4.0;
-    double dtyr = 0.0, time = 0.0;
-    for (double logtime = logtstart; logtime < logtend; logtime += 0.1) {
+    // {%- block timesteps %}
+    std::vector<double> timesteps;
+    double logtstart = 2.0, logtend = 4.0, logtstep = 0.1;
+    double time = 0.0;
+    for (double logtime = logtstart; logtime < logtend + 0.1 * logtstep;
+         logtime += logtstep) {
+        double dtyr = pow(10.0, logtime) - time;
+        timesteps.push_back(dtyr);
+        time += dtyr;
+    }
+    // {%- endblock timesteps %}
+
+    double dtyr = 0.0, curtime = 0.0;
+
+    // write the initial abundances
+    for (int isys = 0; isys < nsystem; isys++) {
+        fwrite((double *)&isys, sizeof(double), 1, fbin);
+        fwrite(&curtime, sizeof(double), 1, fbin);
+        fwrite(&y[isys * NEQUATIONS], sizeof(double), NEQUATIONS, fbin);
+
+        fprintf(ftxt, "%13.7e ", (double)isys);
+        fprintf(ftxt, "%13.7e ", curtime);
+        for (int j = 0; j < NEQUATIONS; j++) {
+            fprintf(ftxt, "%13.7e ", y[isys * NEQUATIONS + j]);
+        }
+        fprintf(ftxt, "\n");
+    }
+    for (auto step = timesteps.begin(); step != timesteps.end(); step++) {
 #ifdef NAUNET_DEBUG
         // EvalRates only receive one system as input, disabled in parallel test
         // EvalRates(rates, y, data);
@@ -60,45 +91,33 @@ int main() {
         // fprintf(rtxt, "\n");
 #endif
 
-        dtyr = pow(10.0, logtime) - time;
-
-        for (int isys = 0; isys < nsystem; isys++) {
-            fwrite((double *)&isys, sizeof(double), 1, fbin);
-            fwrite(&time, sizeof(double), 1, fbin);
-            fwrite(&y[isys * NEQUATIONS], sizeof(double), NEQUATIONS, fbin);
-
-            fprintf(ftxt, "%13.7e ", (double)isys);
-            fprintf(ftxt, "%13.7e ", time);
-            for (int j = 0; j < NEQUATIONS; j++) {
-                fprintf(ftxt, "%13.7e ", y[isys * NEQUATIONS + j]);
-            }
-            fprintf(ftxt, "\n");
-        }
+        dtyr = *step;
 
         Timer timer;
         timer.start();
         naunet.Solve(y, dtyr * spy, data);
         timer.stop();
 
-        time += dtyr;
+        curtime += dtyr;
+
+        // write the abundances after each step
+        for (int isys = 0; isys < nsystem; isys++) {
+            fwrite((double *)&isys, sizeof(double), 1, fbin);
+            fwrite(&curtime, sizeof(double), 1, fbin);
+            fwrite(&y[isys * NEQUATIONS], sizeof(double), NEQUATIONS, fbin);
+
+            fprintf(ftxt, "%13.7e ", (double)isys);
+            fprintf(ftxt, "%13.7e ", curtime);
+            for (int j = 0; j < NEQUATIONS; j++) {
+                fprintf(ftxt, "%13.7e ", y[isys * NEQUATIONS + j]);
+            }
+            fprintf(ftxt, "\n");
+        }
 
         // float duration = (float)timer.elapsed() / 1e6;
         double duration = timer.elapsed();
         fprintf(ttxt, "%8.5e \n", duration);
-        printf("Time = %13.7e yr, elapsed: %8.5e sec\n", time, duration);
-    }
-
-    for (int isys = 0; isys < nsystem; isys++) {
-        fwrite((double *)&isys, sizeof(double), 1, fbin);
-        fwrite(&time, sizeof(double), 1, fbin);
-        fwrite(&y[isys * NEQUATIONS], sizeof(double), NEQUATIONS, fbin);
-
-        fprintf(ftxt, "%13.7e ", (double)isys);
-        fprintf(ftxt, "%13.7e ", time);
-        for (int j = 0; j < NEQUATIONS; j++) {
-            fprintf(ftxt, "%13.7e ", y[isys * NEQUATIONS + j]);
-        }
-        fprintf(ftxt, "\n");
+        printf("Time = %13.7e yr, elapsed: %8.5e sec\n", curtime, duration);
     }
 
     fclose(fbin);
