Move primordial tests into templates

--- a/naunet/templates/base/cpp/tests/singlegrid.cpp.j2
+++ b/naunet/templates/base/cpp/tests/singlegrid.cpp.j2
@@ -79,6 +79,9 @@ int main() {
         fprintf(rtxt, "\n");
 #endif
 
+        // {%- block temperature %}
+        // {%- endblock temperature %}
+
         dtyr = *step;
 
         Timer timer;
