--- a/naunet/templates/tests/cloud/singlegrid.py.in.j2
+++ b/naunet/templates/tests/cloud/singlegrid.py.in.j2
@@ -1,4 +1,4 @@
-{% extends "base/cpp/tests/test.py.in.j2" %}
+{% extends "base/cpp/tests/singlegrid.py.in.j2" %}
 {% block parameters %}
 nH = 2e4
 zeta = 1.3e-17
