--- a/naunet/templates/base/cpp/tests/multiplegrid.cpp.j2
+++ b/naunet/templates/base/cpp/tests/multiplegrid.cpp.j2
@@ -91,6 +91,9 @@ int main() {
         // fprintf(rtxt, "\n");
 #endif
 
+        // {%- block temperature %}
+        // {%- endblock temperature %}
+
         dtyr = *step;
 
         Timer timer;
