--- a/naunet/templates/tests/empty/singlegrid.py.in.j2
+++ b/naunet/templates/tests/empty/singlegrid.py.in.j2
@@ -1,2 +1,2 @@
-{% extends "base/cpp/tests/test.py.in.j2" %}
+{% extends "base/cpp/tests/singlegrid.py.in.j2" %}
 {% block initial_abundance %}{% endblock initial_abundance %}
