--- a/naunet/templates/base/cpp/tests/paralleldata.cpp.j2
+++ b/naunet/templates/base/cpp/tests/paralleldata.cpp.j2
@@ -10,19 +10,14 @@
 #include "naunet_timer.h"
 
 int main() {
-    int nsystem      = 2048;
     double spy       = 86400.0 * 365.0;
 
-    NaunetData *data = new NaunetData[nsystem];
-    // {%- block parameters %}
-    double nH        = 2e4;
-    double Tgas      = 15.0;
+    // {%- block readdata %}
+    // {%- endblock readdata %}
 
-    for (int isys = 0; isys < nsystem; isys++) {
-        data[isys].nH   = nH;
-        data[isys].Tgas = Tgas;
-    }
-    // {%- endblock parameters %}
+    NaunetData *data = new NaunetData[nsystem];
+    // {%- block parameters%}
+    // {%- endblock parameters%}
 
     Naunet naunet;
     if (naunet.Init() == NAUNET_FAIL) {
@@ -40,14 +35,14 @@ int main() {
         for (int i = 0; i < NEQUATIONS; i++) {
             y[isys * NEQUATIONS + i] = 1.e-40;
         }
-        // Set your initial abundance here
-        throw std::runtime_error("Abundance has not been assigned");
     }
+    // Set your initial abundance here
+    throw std::runtime_error("Abundance has not been assigned");
     // {%- endblock initial_abundance %}
 
-    FILE *fbin = fopen("evolution_multiplegrid.bin", "w");
-    FILE *ftxt = fopen("evolution_multiplegrid.txt", "w");
-    FILE *ttxt = fopen("time_parallel.txt", "w");
+    FILE *fbin = fopen("evolution_paralleldata.bin", "w");
+    FILE *ftxt = fopen("evolution_paralleldata.txt", "w");
+    FILE *ttxt = fopen("time_paralleldata.txt", "w");
 
 #ifdef NAUNET_DEBUG
     printf("Initialization is done. Start to evolve.\n");
@@ -82,6 +77,7 @@ int main() {
         }
         fprintf(ftxt, "\n");
     }
+
     for (auto step = timesteps.begin(); step != timesteps.end(); step++) {
 #ifdef NAUNET_DEBUG
         // EvalRates only receive one system as input, disabled in parallel test
@@ -91,7 +87,6 @@ int main() {
         // }
         // fprintf(rtxt, "\n");
 #endif
-
         // {%- block temperature %}
         // {%- endblock temperature %}
 
