--- a/naunet/templates/tests/cloud/multiplegrid.cpp.j2
+++ b/naunet/templates/tests/cloud/multiplegrid.cpp.j2
@@ -46,6 +46,11 @@
     }
 {% endblock parameters %}
 {% block initial_abundance %}
+    double *y = new double[nsystem * NEQUATIONS];
+    for (int isys = 0; isys < nsystem; isys++) {
+        for (int i = 0; i < NEQUATIONS; i++) {
+            y[isys * NEQUATIONS + i] = 1.e-40;
+        }
         y[isys * NEQUATIONS + IDX_H2I] = 0.5 * nH;
         y[isys * NEQUATIONS + IDX_HI]  = 5.0e-5 * nH;
         y[isys * NEQUATIONS + IDX_HeI] = 9.75e-2 * nH;
@@ -56,4 +61,5 @@
         y[isys * NEQUATIONS + IDX_SiI] = 8.0e-9 * nH;
         y[isys * NEQUATIONS + IDX_MgI] = 7.0e-9 * nH;
         y[isys * NEQUATIONS + IDX_ClI] = 4.0e-9 * nH;
+    }
 {% endblock initial_abundance %}
