--- a/naunet/templates/tests/cloud/singlegrid.py.in.j2
+++ b/naunet/templates/tests/cloud/singlegrid.py.in.j2
@@ -43,6 +43,7 @@ naunet_data.h2deseff = h2deseff
 naunet_data.uvcreff = uvcreff
 {% endblock parameters %}
 {% block initial_abundance %}
+y = np.ones(len(species)+has_thermal) * 1e-40
 y[species.index("H2")] = 0.5 * nH
 y[species.index("H")] = 5.0e-5 * nH
 y[species.index("HE")] = 9.75e-2 * nH
