--- a/naunet/templates/tests/primordial/singlegrid.cpp.j2
+++ b/naunet/templates/tests/primordial/singlegrid.cpp.j2
@@ -8,13 +8,17 @@
     data.Tgas       = Tgas;
 {% endblock parameters %}
 {% block initial_abundance %}
-    y[IDX_HI]            = nH;
-    y[IDX_HII]           = 1e-4 * nH;
-    y[IDX_HeI]           = 1e-1 * nH;
-    y[IDX_HDI]           = 1.5e-5 * nH;
-    y[IDX_H2I]           = 1.5e-5 * nH;
-    y[IDX_eM]            = 1e-4 * nH;
-    y[IDX_TGAS]          = Tgas;
+    double y[NEQUATIONS];
+    for (int i = 0; i < NEQUATIONS; i++) {
+        y[i] = 1.e-40;
+    }
+    y[IDX_HI]   = nH;
+    y[IDX_HII]  = 1e-4 * nH;
+    y[IDX_HeI]  = 1e-1 * nH;
+    y[IDX_HDI]  = 1.5e-5 * nH;
+    y[IDX_H2I]  = 1.5e-5 * nH;
+    y[IDX_eM]   = 1e-4 * nH;
+    y[IDX_TGAS] = Tgas;
 {% endblock initial_abundance %}
 {% block temperature %}
         // synchronize the temperature if you want to make chemistry and
