--- a/naunet/templates/tests/primordial/singlegrid.py.in.j2
+++ b/naunet/templates/tests/primordial/singlegrid.py.in.j2
@@ -7,6 +7,7 @@ naunet_data.nH = nH
 naunet_data.Tgas = tgas
 {% endblock parameters %}
 {% block initial_abundance %}
+y = np.ones(len(species)+has_thermal) * 1e-40
 y[species.index("H")]      = nH
 y[species.index("H+")]     = 1e-4 * nH
 y[species.index("He")]     = 1e-1 * nH
