--- a/naunet/templates/base/cpp/include/naunet_macros.h.j2
+++ b/naunet/templates/base/cpp/include/naunet_macros.h.j2
@@ -5,6 +5,7 @@
 #define NAUNET_SUCCESS 0
 #define NAUNET_FAIL 1
 
+#define NELEMENTS {{ macros.elemcidx | length }}
 {{ macros.nspec }}
 {{ macros.neqns }}
 {{ macros.nreact }}
@@ -25,6 +26,10 @@
 
 {% for idx in macros.speclist -%}
     {{ idx }}
-{% endfor -%}
+{% endfor %}
+
+{% for idx in macros.elemcidx %}
+#define {{ idx }} {{ loop.index0 }}
+{% endfor %}
 
 #endif
