--- a/naunet/templates/cvode/include/naunet.h.j2
+++ b/naunet/templates/cvode/include/naunet.h.j2
@@ -24,9 +24,23 @@ class Naunet {
     Naunet();
     ~Naunet();
     int Finalize();
-    int Init(int nsystem = MAX_NSYSTEMS, double atol = 1e-20, double rtol = 1e-5, int mxsteps=500);
+    int Init(int nsystem = MAX_NSYSTEMS, double atol = 1e-20,
+             double rtol = 1e-5, int mxsteps = 500);
     int PrintDebugInfo();
-    int Reset(int nsystem = MAX_NSYSTEMS, double atol = 1e-20, double rtol = 1e-5, int mxsteps=500);
+#ifdef IDX_ELEM_H
+    // Renormalize the species abundances accroding to `ab_ref_`(private).
+    // This conserves the element fractions but does not change the overall
+    // density/
+    int Renorm(realtype *ab);
+#endif
+    int Reset(int nsystem = MAX_NSYSTEMS, double atol = 1e-20,
+              double rtol = 1e-5, int mxsteps = 500);
+#ifdef IDX_ELEM_H
+    // Set the reference abundance `ab_ref_`. `opt == 0` assumes that the input
+    // is element abundances. `opt == 1` assumes the input is species
+    // abundances.
+    int SetReferenceAbund(realtype *ref, int opt = 0);
+#endif
     int Solve(realtype *ab, realtype dt, NaunetData *data);
 #ifdef PYMODULE
     py::array_t<realtype> PyWrapSolve(py::array_t<realtype> arr, realtype dt,
@@ -39,6 +53,7 @@ class Naunet {
     realtype atol_;
     realtype rtol_;
     FILE *errfp_;
+    realtype ab_ref_[NELEMENTS];
 
     /* {% if info.method == "cusparse" -%} */
 
@@ -70,15 +85,16 @@ class Naunet {
     SUNLinearSolver cv_ls_;
 
     realtype ab_init_[NEQUATIONS];
-    realtype ab_tmp_[NEQUATIONS]; // Temporary state for error handling
+    realtype ab_tmp_[NEQUATIONS];  // Temporary state for error handling
 
     /* {% endif %} */
 
-    int GetCVStates(void *cv_mem, 
-                    long int &nst, long int &nfe, long int &nsetups, long int &nje, 
-                    long int &netf, long int &nge, long int &nni, long int &ncfn);
+    int GetCVStates(void *cv_mem, long int &nst, long int &nfe,
+                    long int &nsetups, long int &nje, long int &netf,
+                    long int &nge, long int &nni, long int &ncfn);
     int HandleError(int flag, realtype *ab, realtype dt, realtype t0);
-    static int CheckFlag(void *flagvalue, const char *funcname, int opt, FILE *errf);
+    static int CheckFlag(void *flagvalue, const char *funcname, int opt,
+                         FILE *errf);
 };
 
 #ifdef PYMODULE
