--- a/naunet/templates/tests/ism/singlegrid.py.in.j2
+++ b/naunet/templates/tests/ism/singlegrid.py.in.j2
@@ -1,22 +1,5 @@
-import os
-import sys
-sys.path.append(os.getenv('PYNAUNET_PATH'))
-
-import numpy as np
-from tomlkit.toml_file import TOMLFile
-
-from @PYMODNAME@ import Naunet, NaunetData
-
-config_path = os.getenv('NAUNET_CONFIG_PATH')
-config = TOMLFile(os.path.join(config_path, "naunet_config.toml"))
-content = config.read()
-chemistry = content["chemistry"]
-species = chemistry["species"]
-
-naunet_solver = Naunet()
-naunet_data = NaunetData()
-
-spy = 86400.0 * 365.0
+{% extends "base/cpp/tests/singlegrid.py.in.j2" %}
+{% block parameters %}
 nH = 2e4
 zeta_cr = 1.3e-17
 zeta_xr = 0.0
@@ -50,14 +33,9 @@ naunet_data.nMono = nMono
 naunet_data.duty = duty
 naunet_data.Tcr = Tcr
 naunet_data.branch = branch
-
-naunet_solver.Init()
-if @USE_CUDA@:
-    naunet_solver.Reset(1)
-
+{% endblock parameters %}
+{% block initial_abundance %}
 y = np.ones(len(species)) * 1e-40
-# Only works if the species list in naunet_config.toml has been updated
-# Otherwise check the macros in naunet_macros.h
 y[species.index("H2")]     = 0.5 * nH
 y[species.index("H")]      = 5.0e-5 * nH
 y[species.index("He")]     = 9.75e-2 * nH
@@ -72,22 +50,4 @@ y[species.index("Fe")]     = 3.0e-9 * nH
 y[species.index("Cl")]     = 4.0e-9 * nH
 y[species.index("F")]      = 2.0e-8 * nH
 y[species.index("GRAIN0")] = 1.3e-12 * nH
-
-times = np.logspace(3, 8, 51)
-timesteps = times[0]
-timesteps = np.append(timesteps, times[1:] - times[:-1])
-
-with open("evolution_pymodule.dat", "w") as evoldat:
-
-    curtime = 0.0
-
-    for ti, dtyr in enumerate(timesteps):
-        curtime += dtyr
-        dt = dtyr * spy
-        y = naunet_solver.Solve(y, dt, naunet_data)
-
-        fmty = [f"{yi:13.7e}" for yi in y]
-        evoldat.write(" ".join([f"{curtime:13.7e}", *fmty]))
-        evoldat.write("\n")
-
-naunet_solver.Finalize();
+{% endblock initial_abundance %}
