--- a/naunet/templates/base/cpp/include/naunet_macros.h.j2
+++ b/naunet/templates/base/cpp/include/naunet_macros.h.j2
@@ -5,16 +5,6 @@
 #define NAUNET_SUCCESS 0
 #define NAUNET_FAIL 1
 
-#define NELEMENTS {{ macros.elemcidx | length }}
-#define NSPECIES {{ macros.speccidx | length }}
-#define NHEATPROCS {{ macros.nheating }}
-#define NCOOLPROCS {{ macros.ncooling }}
-#define THERMAL (NHEATPROCS || NCOOLPROCS)
-#define NEQUATIONS (NSPECIES + THERMAL)
-#define NREACTIONS {{ macros.nreact }}
-{% if info.method == "sparse" or info.method == "cusparse" -%}
-{{ macros.nnz }}
-{% endif %}
 {% if info.method == "cusparse" -%}
 #define USE_CUDA
 #define MAX_NSYSTEMS 4096
@@ -24,6 +14,20 @@
 {% else %}
 #define MAX_NSYSTEMS 1
 {% endif %}
+
+#define NELEMENTS {{ macros.elemcidx | length }}
+#define NSPECIES {{ macros.speccidx | length }}
+#define NHEATPROCS {{ macros.nheating }}
+#define NCOOLPROCS {{ macros.ncooling }}
+#define THERMAL (NHEATPROCS || NCOOLPROCS)
+#if (NSPECIES + THERMAL)
+#define NEQUATIONS (NSPECIES + THERMAL)
+#else
+#define NEQUATIONS 1
+#endif
+#define NREACTIONS {{ macros.nreact }}
+// non-zero terms in jacobian matrix, used in sparse matrix
+#define NNZ {{ macros.nnz }}
 
 {% for idx in macros.elemcidx %}
 #define {{ idx }} {{ loop.index0 }}
