--- a/naunet/templates/tests/empty/multiplegrid.cpp.j2
+++ b/naunet/templates/tests/empty/multiplegrid.cpp.j2
@@ -1,4 +1,10 @@
 // {% extends "base/cpp/tests/multiplegrid.cpp.j2" %}
 // clang-format off
 {% block initial_abundance %}
+    double *y = new double[nsystem * NEQUATIONS];
+    for (int isys = 0; isys < nsystem; isys++) {
+        for (int i = 0; i < NEQUATIONS; i++) {
+            y[isys * NEQUATIONS + i] = 1.e-40;
+        }
+    }
 {% endblock initial_abundance %}
