Rename some variables in enzo patch

--- a/naunet/templates/patches/enzo/Grid_NaunetWrapper.C.j2
+++ b/naunet/templates/patches/enzo/Grid_NaunetWrapper.C.j2
@@ -142,7 +142,7 @@ int grid::NaunetWrapper()
   // Set your parameters here
   NaunetData data;
 
-  float y[NAUNET_NEQUATIONS];
+  float y[NEQUATIONS];
 
   for (k = GridStartIndex[2]; k <= GridEndIndex[2]; k++) {
     for (j = GridStartIndex[1]; j <= GridEndIndex[1]; j++) {
